converted/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert -f ../docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert -f ../docker-compose.yml
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/back-database: "true"
        io.kompose.network/nginx-back: "true"
        io.kompose.service: backend
    spec:
      containers:
        - image: 10.209.10.220:5000/project-backend
          name: backend
          resources: {}
      restartPolicy: Always
status: {}
