converted/ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert -f ../docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: ingress
  name: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ingress
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert -f ../docker-compose.yml
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/nginx-back: "true"
        io.kompose.network/nginx-front: "true"
        io.kompose.service: ingress
    spec:
      containers:
        - image: 10.209.10.220:5000/project-ingress
          name: ingress
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
